project and 3.07 started

--- a/lab3.02/analyze_3.02.ipynb
+++ b/lab3.02/analyze_3.02.ipynb
@@ -1025,7 +1025,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('физика': venv)",
+   "display_name": "Python 3.9.4 ('_DLS': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1044,7 +1044,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8a6346fe04895c09f63061fdcb1f4ae785c0a2dafb06bd47121824d93a6d8cae"
+    "hash": "b9a3f92bf183c45297cb51f112f7acb14dc54998ca1ebdf649d8f3d49d9e01e1"
    }
   }
  },
