--- a/lab3.07/analyze_3.07.ipynb
+++ b/lab3.07/analyze_3.07.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -75,7 +75,7 @@
        "'/Users/kirilllalayants/Desktop/физика/PhysicsITMO_Electrostatics/lab3.07'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "0  31.648335  0.574902  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
      "text": [
       "Bm = (0.498 +- 0.08) Тл,  eps_Br = 16.0%\n",
       "Hm = (132 +- 13) А/м,  eps_Hc = 10.0%\n",
-      "Hm = (3007 +- 573) А/м,  eps_Hc = 19.0%\n"
+      "𝜇 = (3007 +- 573),  eps_𝜇 = 19.0%\n"
      ]
     }
    ],
@@ -359,7 +359,7 @@
     "\n",
     "print(f\"Bm = ({round(Bm.item(), 3)} +- {round(dBm.item(), 3)}) Тл,  eps_Br = {round((dBm/Bm).item(), 2)* 100}%\")\n",
     "print(f\"Hm = ({round(Hm.item())} +- {round(dHm.item())}) А/м,  eps_Hc = {round((dHm/Hm).item(), 2)* 100}%\")\n",
-    "print(f\"Hm = ({round(Mum.item())} +- {round(dMum.item())}) А/м,  eps_Hc = {round((dMum/Mum).item(), 2)* 100}%\")\n",
+    "print(f\"𝜇 = ({round(Mum.item())} +- {round(dMum.item())}),  eps_𝜇 = {round((dMum/Mum).item(), 2)* 100}%\")\n",
     "\n",
     "data_2['Hm, A/m'] = Hm\n",
     "data_2['Bm, Tl'] = Bm \n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "15  3006.783556  0.498164  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,16 +706,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12c12b100>"
+       "<matplotlib.legend.Legend at 0x130995a30>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -740,16 +740,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12c1cff40>"
+       "<matplotlib.legend.Legend at 0x130b85160>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
