--- a/lab3.10/analyze_3.10.ipynb
+++ b/lab3.10/analyze_3.10.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -75,7 +75,7 @@
        "'/Users/kirilllalayants/Desktop/физика/PhysicsITMO_Electrostatics/lab3.10'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "12       NaN  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -425,13 +425,33 @@
     "\n",
     "plt.plot(x, line(x), label=f\"{line}\".replace('x', 'Rm'), linewidth = 3)\n",
     "\n",
-    "R0 = fit[1]\n",
+    "R0 = abs(fit[1]/fit[0])\n",
     "\n",
     "plt.xlabel(\"Rm, Ohm\")\n",
     "plt.ylabel(\"lambda\")\n",
     "plt.title(\"График зависимости логарифмического  декремента lambda от сопротивления магазина Rm\")\n",
     "plt.legend()\n",
     "print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82.84922800626234"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R0 "
    ]
   },
   {
@@ -443,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +527,7 @@
        "0  3.300000e-09  4.700000e-09  4.700000e-08  0.01  0.001     40  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,16 +551,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rm, Ohm</th>\n",
+       "      <th>T, s</th>\n",
+       "      <th>2Ui, ticks</th>\n",
+       "      <th>2Ui+n, ticks</th>\n",
+       "      <th>N</th>\n",
+       "      <th>lambda</th>\n",
+       "      <th>Q</th>\n",
+       "      <th>R, Ohm</th>\n",
+       "      <th>L, H</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.386595</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>92.849228</td>\n",
+       "      <td>0.000156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.475705</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>102.849228</td>\n",
+       "      <td>0.000398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.522872</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>112.849228</td>\n",
+       "      <td>0.000732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.528026</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>122.849228</td>\n",
+       "      <td>0.001269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.572566</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>132.849228</td>\n",
+       "      <td>0.001680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>60</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.626381</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>142.849228</td>\n",
+       "      <td>0.002017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>70</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>152.849228</td>\n",
+       "      <td>0.002238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>80</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.747214</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>162.849228</td>\n",
+       "      <td>0.002512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>90</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.810930</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>172.849228</td>\n",
+       "      <td>0.002696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>100</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.753772</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>182.849228</td>\n",
+       "      <td>0.003850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>200</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.349927</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>282.849228</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>300</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.897120</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>382.849228</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>400</td>\n",
+       "      <td>0.00008</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.484907</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>482.849228</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Rm, Ohm     T, s  2Ui, ticks  2Ui+n, ticks  N    lambda   Q      R, Ohm  \\\n",
+       "0        10  0.00008         5.2           2.4  2  0.386595 NaN   92.849228   \n",
+       "1        20  0.00008        10.0           2.4  3  0.475705 NaN  102.849228   \n",
+       "2        30  0.00008         9.6           2.0  3  0.522872 NaN  112.849228   \n",
+       "3        40  0.00008         9.2           3.2  2  0.528026 NaN  122.849228   \n",
+       "4        50  0.00008         8.8           2.8  2  0.572566 NaN  132.849228   \n",
+       "5        60  0.00008         8.4           2.4  2  0.626381 NaN  142.849228   \n",
+       "6        70  0.00008         8.0           2.0  2  0.693147 NaN  152.849228   \n",
+       "7        80  0.00008         7.6           3.6  1  0.747214 NaN  162.849228   \n",
+       "8        90  0.00008         7.2           3.2  1  0.810930 NaN  172.849228   \n",
+       "9       100  0.00008         6.8           3.2  1  0.753772 NaN  182.849228   \n",
+       "10      200  0.00008        10.8           2.8  1  1.349927 NaN  282.849228   \n",
+       "11      300  0.00008        16.0           2.4  1  1.897120 NaN  382.849228   \n",
+       "12      400  0.00008         4.8           0.4  1  2.484907 NaN  482.849228   \n",
+       "\n",
+       "        L, H  \n",
+       "0   0.000156  \n",
+       "1   0.000398  \n",
+       "2   0.000732  \n",
+       "3   0.001269  \n",
+       "4   0.001680  \n",
+       "5   0.002017  \n",
+       "6   0.002238  \n",
+       "7   0.002512  \n",
+       "8   0.002696  \n",
+       "9   0.003850  \n",
+       "10       NaN  \n",
+       "11       NaN  \n",
+       "12       NaN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.001754841506371885"
+       "0.0017548415063718854"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
