--- a/lab3.10/analyze_3.10.ipynb
+++ b/lab3.10/analyze_3.10.ipynb
@@ -86,7 +86,8 @@
     "import pandas as pd\n",
     "import os\n",
     "import xlsxwriter\n",
-    "os.getcwd()\n"
+    "os.getcwd()\n",
+    "\n"
    ]
   },
   {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -113,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 13) (13, 9) (4, 4)\n"
+      "(1, 14) (13, 9) (4, 4)\n"
      ]
     }
    ],
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -187,9 +188,9 @@
        "      <td>2.4</td>\n",
        "      <td>2</td>\n",
        "      <td>0.386595</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.367652</td>\n",
-       "      <td>0.000156</td>\n",
+       "      <td>11.668773</td>\n",
+       "      <td>92.849228</td>\n",
+       "      <td>0.012525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -199,9 +200,9 @@
        "      <td>2.4</td>\n",
        "      <td>3</td>\n",
        "      <td>0.475705</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>20.367652</td>\n",
-       "      <td>0.000398</td>\n",
+       "      <td>10.236464</td>\n",
+       "      <td>102.849228</td>\n",
+       "      <td>0.010150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -211,9 +212,9 @@
        "      <td>2.0</td>\n",
        "      <td>3</td>\n",
        "      <td>0.522872</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30.367652</td>\n",
-       "      <td>0.000732</td>\n",
+       "      <td>9.687756</td>\n",
+       "      <td>112.849228</td>\n",
+       "      <td>0.010114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -223,9 +224,9 @@
        "      <td>3.2</td>\n",
        "      <td>2</td>\n",
        "      <td>0.528026</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>40.367652</td>\n",
-       "      <td>0.001269</td>\n",
+       "      <td>9.634217</td>\n",
+       "      <td>122.849228</td>\n",
+       "      <td>0.011753</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -235,9 +236,9 @@
        "      <td>2.8</td>\n",
        "      <td>2</td>\n",
        "      <td>0.572566</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>50.367652</td>\n",
-       "      <td>0.001680</td>\n",
+       "      <td>9.215338</td>\n",
+       "      <td>132.849228</td>\n",
+       "      <td>0.011689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -247,9 +248,9 @@
        "      <td>2.4</td>\n",
        "      <td>2</td>\n",
        "      <td>0.626381</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>60.367652</td>\n",
-       "      <td>0.002017</td>\n",
+       "      <td>8.796459</td>\n",
+       "      <td>142.849228</td>\n",
+       "      <td>0.011293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -259,9 +260,9 @@
        "      <td>2.0</td>\n",
        "      <td>2</td>\n",
        "      <td>0.693147</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>70.367652</td>\n",
-       "      <td>0.002238</td>\n",
+       "      <td>8.377580</td>\n",
+       "      <td>152.849228</td>\n",
+       "      <td>0.010558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -271,9 +272,9 @@
        "      <td>3.6</td>\n",
        "      <td>1</td>\n",
        "      <td>0.747214</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>80.367652</td>\n",
-       "      <td>0.002512</td>\n",
+       "      <td>8.100821</td>\n",
+       "      <td>162.849228</td>\n",
+       "      <td>0.010313</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -283,9 +284,9 @@
        "      <td>3.2</td>\n",
        "      <td>1</td>\n",
        "      <td>0.810930</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>90.367652</td>\n",
-       "      <td>0.002696</td>\n",
+       "      <td>7.829816</td>\n",
+       "      <td>172.849228</td>\n",
+       "      <td>0.009865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -295,9 +296,9 @@
        "      <td>3.2</td>\n",
        "      <td>1</td>\n",
        "      <td>0.753772</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>100.367652</td>\n",
-       "      <td>0.003850</td>\n",
+       "      <td>8.070402</td>\n",
+       "      <td>182.849228</td>\n",
+       "      <td>0.012777</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -307,9 +308,9 @@
        "      <td>2.8</td>\n",
        "      <td>1</td>\n",
        "      <td>1.349927</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>200.367652</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>6.735944</td>\n",
+       "      <td>282.849228</td>\n",
+       "      <td>0.009533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -319,9 +320,9 @@
        "      <td>2.4</td>\n",
        "      <td>1</td>\n",
        "      <td>1.897120</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>300.367652</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>6.427811</td>\n",
+       "      <td>382.849228</td>\n",
+       "      <td>0.008843</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -331,47 +332,47 @@
        "      <td>0.4</td>\n",
        "      <td>1</td>\n",
        "      <td>2.484907</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>400.367652</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>6.327124</td>\n",
+       "      <td>482.849228</td>\n",
+       "      <td>0.008198</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Rm, Ohm     T, s  2Ui, ticks  2Ui+n, ticks  N    lambda   Q      R, Ohm  \\\n",
-       "0        10  0.00008         5.2           2.4  2  0.386595 NaN   10.367652   \n",
-       "1        20  0.00008        10.0           2.4  3  0.475705 NaN   20.367652   \n",
-       "2        30  0.00008         9.6           2.0  3  0.522872 NaN   30.367652   \n",
-       "3        40  0.00008         9.2           3.2  2  0.528026 NaN   40.367652   \n",
-       "4        50  0.00008         8.8           2.8  2  0.572566 NaN   50.367652   \n",
-       "5        60  0.00008         8.4           2.4  2  0.626381 NaN   60.367652   \n",
-       "6        70  0.00008         8.0           2.0  2  0.693147 NaN   70.367652   \n",
-       "7        80  0.00008         7.6           3.6  1  0.747214 NaN   80.367652   \n",
-       "8        90  0.00008         7.2           3.2  1  0.810930 NaN   90.367652   \n",
-       "9       100  0.00008         6.8           3.2  1  0.753772 NaN  100.367652   \n",
-       "10      200  0.00008        10.8           2.8  1  1.349927 NaN  200.367652   \n",
-       "11      300  0.00008        16.0           2.4  1  1.897120 NaN  300.367652   \n",
-       "12      400  0.00008         4.8           0.4  1  2.484907 NaN  400.367652   \n",
+       "    Rm, Ohm     T, s  2Ui, ticks  2Ui+n, ticks  N    lambda          Q  \\\n",
+       "0        10  0.00008         5.2           2.4  2  0.386595  11.668773   \n",
+       "1        20  0.00008        10.0           2.4  3  0.475705  10.236464   \n",
+       "2        30  0.00008         9.6           2.0  3  0.522872   9.687756   \n",
+       "3        40  0.00008         9.2           3.2  2  0.528026   9.634217   \n",
+       "4        50  0.00008         8.8           2.8  2  0.572566   9.215338   \n",
+       "5        60  0.00008         8.4           2.4  2  0.626381   8.796459   \n",
+       "6        70  0.00008         8.0           2.0  2  0.693147   8.377580   \n",
+       "7        80  0.00008         7.6           3.6  1  0.747214   8.100821   \n",
+       "8        90  0.00008         7.2           3.2  1  0.810930   7.829816   \n",
+       "9       100  0.00008         6.8           3.2  1  0.753772   8.070402   \n",
+       "10      200  0.00008        10.8           2.8  1  1.349927   6.735944   \n",
+       "11      300  0.00008        16.0           2.4  1  1.897120   6.427811   \n",
+       "12      400  0.00008         4.8           0.4  1  2.484907   6.327124   \n",
        "\n",
-       "        L, H  \n",
-       "0   0.000156  \n",
-       "1   0.000398  \n",
-       "2   0.000732  \n",
-       "3   0.001269  \n",
-       "4   0.001680  \n",
-       "5   0.002017  \n",
-       "6   0.002238  \n",
-       "7   0.002512  \n",
-       "8   0.002696  \n",
-       "9   0.003850  \n",
-       "10       NaN  \n",
-       "11       NaN  \n",
-       "12       NaN  "
+       "        R, Ohm      L, H  \n",
+       "0    92.849228  0.012525  \n",
+       "1   102.849228  0.010150  \n",
+       "2   112.849228  0.010114  \n",
+       "3   122.849228  0.011753  \n",
+       "4   132.849228  0.011689  \n",
+       "5   142.849228  0.011293  \n",
+       "6   152.849228  0.010558  \n",
+       "7   162.849228  0.010313  \n",
+       "8   172.849228  0.009865  \n",
+       "9   182.849228  0.012777  \n",
+       "10  282.849228  0.009533  \n",
+       "11  382.849228  0.008843  \n",
+       "12  482.849228  0.008198  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,18 +383,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "lambd = 1/data_1[\"N\"] * np.log(data_1['2Ui, ticks'] / data_1['2Ui+n, ticks'])\n",
+    "dN = 0.1\n",
+    "dlambd = np.sqrt((1/data_1[\"N\"] / data_1['2Ui, ticks'] * data_1['2Ui+n, ticks'] * 1 /data_1['2Ui+n, ticks'] * dN )**2\\\n",
+    "    + (1/data_1[\"N\"] / data_1['2Ui, ticks'] * data_1['2Ui+n, ticks'] * data_1['2Ui, ticks']/data_1['2Ui+n, ticks']**2 * dN )**2)                     \n",
     "\n",
-    "data_1['lambda'] = lambd\n"
+    "data_1['lambda'] = lambd\n",
+    "data_1[\"dlabmda\"] = dlambd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -447,14 +452,14 @@
        "82.84922800626234"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "table_consts[\"R_0, Ohm\"] = R0\n",
-    "R0\n"
+    "R0"
    ]
   },
   {
@@ -466,20 +471,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.059352\n",
+       "1     0.030025\n",
+       "2     0.032560\n",
+       "3     0.031330\n",
+       "4     0.032729\n",
+       "5     0.034591\n",
+       "6     0.037177\n",
+       "7     0.041135\n",
+       "8     0.042171\n",
+       "9     0.045819\n",
+       "10    0.027331\n",
+       "11    0.022209\n",
+       "12    0.100956\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "R = R0 + data_1[\"Rm, Ohm\"]\n",
     "data_1[\"R, Ohm\"] = R\n",
     "\n",
     "L = (np.pi * data_1[\"R, Ohm\"].iloc[0:13].to_numpy()) ** 2 * \\\n",
-    "    table_consts[\"C1, F\"].to_numpy(\n",
-    ") / data_1[\"lambda\"].iloc[0:13].to_numpy() ** 2\n",
+    "    table_consts[\"C1, F\"].to_numpy() / data_1[\"lambda\"].iloc[0:13].to_numpy() ** 2\n",
+    "\n",
+    "dL = np.sqrt((L/lambd * dlambd)**2)\n",
     "data_1[\"L, H\"] = L\n",
+    "data_1[\"dL, H\"] = dL\n",
     "\n",
     "L_mean = L.mean()\n",
-    "table_consts[\"L_mean, H\"] = L_mean\n"
+    "table_consts[\"L_mean, H\"] = L_mean\n",
+    "dL/L\n"
    ]
   },
   {
@@ -491,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +532,7 @@
        "Text(0.5, 1.0, 'График зависимости добротности Q от сопротивления R')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -537,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -559,27 +591,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-15314288.13048325, -15314288.13048325, -15314288.13048325,\n",
-       "       -15314288.13048324])"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "C = data_2[\"C\"].to_numpy()\n",
     "T_exp = data_2[\"T_exp, c\"].to_numpy()\n",
     "T_theory = np.pi * 2/np.sqrt(1/(L_mean * C) - R0 ** 2 / (4*L_mean**2))\n",
-    "T_theorycomm\n",
-    "L_mean * C - R0 ** 2 / (4*L_mean**2)"
+    "\n",
+    "data_2[\"T_theory, c\"] = T_theory\n",
+    "data_2[\"deltaT\"] = (T_exp - T_theory)/T_theory\n"
    ]
   },
   {
@@ -595,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -606,7 +627,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4m/cdm9j52s2fs9_8ccjqtb1sy00000gn/T/ipykernel_73315/1270109265.py:9: FutureWarning: save is not part of the public API, usage can give in unexpected results and will be removed in a future version\n",
+      "/var/folders/4m/cdm9j52s2fs9_8ccjqtb1sy00000gn/T/ipykernel_22055/1270109265.py:9: FutureWarning: save is not part of the public API, usage can give in unexpected results and will be removed in a future version\n",
       "  writer.save()\n"
      ]
     }
@@ -633,7 +654,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit ('3.11.0')",
+   "display_name": "Python 3.11.0 64-bit ('study')",
    "language": "python",
    "name": "python3"
   },
@@ -652,7 +673,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "737380ce9bb101e74fa4768388ec0e7e079a62043d84f2a95f0356f74edfceb7"
+    "hash": "15a4fa75d5afaf4ca320b140a41eaaf942af6dd29a5021d971bdd199875f0fe3"
    }
   }
  },
