--- a/lab3.10/analyze_3.10.ipynb
+++ b/lab3.10/analyze_3.10.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -75,7 +75,7 @@
        "'/Users/kirilllalayants/physics/PhysicsITMO_Electrostatics/lab3.10'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "12  482.849228  0.008198  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "82.84922800626234"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,33 +471,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     0.059352\n",
-       "1     0.030025\n",
-       "2     0.032560\n",
-       "3     0.031330\n",
-       "4     0.032729\n",
-       "5     0.034591\n",
-       "6     0.037177\n",
-       "7     0.041135\n",
-       "8     0.042171\n",
-       "9     0.045819\n",
-       "10    0.027331\n",
-       "11    0.022209\n",
-       "12    0.100956\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R = R0 + data_1[\"Rm, Ohm\"]\n",
     "data_1[\"R, Ohm\"] = R\n",
@@ -510,8 +486,7 @@
     "data_1[\"dL, H\"] = dL\n",
     "\n",
     "L_mean = L.mean()\n",
-    "table_consts[\"L_mean, H\"] = L_mean\n",
-    "dL/L\n"
+    "table_consts[\"L_mean, H\"] = L_mean\n"
    ]
   },
   {
@@ -523,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +507,7 @@
        "Text(0.5, 1.0, 'График зависимости добротности Q от сопротивления R')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -549,7 +524,9 @@
    ],
    "source": [
     "Q = 2 * np.pi/(1-np.exp(-2 * data_1[\"lambda\"].iloc[0:13].to_numpy()))\n",
+    "dQ = np.sqrt((Q / (1-np.exp(-2 * data_1[\"lambda\"].iloc[0:13].to_numpy())) * -2 * data_1[\"lambda\"].iloc[0:13].to_numpy() * np.exp(-2 * data_1[\"lambda\"].iloc[0:13].to_numpy()) * dlambd)**2)\n",
     "data_1[\"Q\"] = Q\n",
+    "data_1[\"dQ\"] = dQ\n",
     "\n",
     "# Q_for_lowR = 1 / data_1[\"R, Ohm\"].iloc[0:1].to_numpy() * np.sqrt(data_1[\"L, H\"].iloc[0:1].to_numpy() / table_consts[\"C1, F\"].to_numpy())\n",
     "# print((Q[0] - Q_for_lowR)/Q[0])\n",
@@ -569,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
