--- a/lab3.10/analyze_3.10.ipynb
+++ b/lab3.10/analyze_3.10.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -75,7 +75,7 @@
        "'/Users/kirilllalayants/physics/PhysicsITMO_Electrostatics/lab3.10'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -114,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 14) (13, 9) (4, 4)\n"
+      "(1, 15) (13, 12) (4, 4)\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -168,222 +168,69 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Rm, Ohm</th>\n",
-       "      <th>T, s</th>\n",
-       "      <th>2Ui, ticks</th>\n",
-       "      <th>2Ui+n, ticks</th>\n",
-       "      <th>N</th>\n",
-       "      <th>lambda</th>\n",
-       "      <th>Q</th>\n",
-       "      <th>R, Ohm</th>\n",
+       "      <th>C1, F</th>\n",
+       "      <th>C2, F</th>\n",
+       "      <th>C3, F</th>\n",
+       "      <th>C4, F</th>\n",
+       "      <th>dC1</th>\n",
+       "      <th>dC2</th>\n",
+       "      <th>dC3</th>\n",
+       "      <th>dC4</th>\n",
        "      <th>L, H</th>\n",
+       "      <th>dL</th>\n",
+       "      <th>f, Hz</th>\n",
+       "      <th>L_mean, H</th>\n",
+       "      <th>R_0, Ohm</th>\n",
+       "      <th>R_no_fluctuations, Ohm</th>\n",
+       "      <th>dL_mean, H</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.386595</td>\n",
-       "      <td>11.668773</td>\n",
-       "      <td>92.849228</td>\n",
-       "      <td>0.012525</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.475705</td>\n",
-       "      <td>10.236464</td>\n",
-       "      <td>102.849228</td>\n",
-       "      <td>0.010150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.522872</td>\n",
-       "      <td>9.687756</td>\n",
-       "      <td>112.849228</td>\n",
-       "      <td>0.010114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>2.200000e-08</td>\n",
+       "      <td>3.300000e-08</td>\n",
+       "      <td>4.700000e-08</td>\n",
+       "      <td>4.700000e-07</td>\n",
+       "      <td>2.200000e-09</td>\n",
+       "      <td>3.300000e-09</td>\n",
+       "      <td>4.700000e-09</td>\n",
+       "      <td>4.700000e-08</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.001</td>\n",
        "      <td>40</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.528026</td>\n",
-       "      <td>9.634217</td>\n",
-       "      <td>122.849228</td>\n",
-       "      <td>0.011753</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>50</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>8.8</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.572566</td>\n",
-       "      <td>9.215338</td>\n",
-       "      <td>132.849228</td>\n",
-       "      <td>0.011689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>60</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>8.4</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.626381</td>\n",
-       "      <td>8.796459</td>\n",
-       "      <td>142.849228</td>\n",
-       "      <td>0.011293</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>70</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.693147</td>\n",
-       "      <td>8.377580</td>\n",
-       "      <td>152.849228</td>\n",
-       "      <td>0.010558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>80</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.747214</td>\n",
-       "      <td>8.100821</td>\n",
-       "      <td>162.849228</td>\n",
-       "      <td>0.010313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>90</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.810930</td>\n",
-       "      <td>7.829816</td>\n",
-       "      <td>172.849228</td>\n",
-       "      <td>0.009865</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>100</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.753772</td>\n",
-       "      <td>8.070402</td>\n",
-       "      <td>182.849228</td>\n",
-       "      <td>0.012777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>200</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>10.8</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.349927</td>\n",
-       "      <td>6.735944</td>\n",
-       "      <td>282.849228</td>\n",
-       "      <td>0.009533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>300</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.897120</td>\n",
-       "      <td>6.427811</td>\n",
-       "      <td>382.849228</td>\n",
-       "      <td>0.008843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>400</td>\n",
-       "      <td>0.00008</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.484907</td>\n",
-       "      <td>6.327124</td>\n",
-       "      <td>482.849228</td>\n",
-       "      <td>0.008198</td>\n",
+       "      <td>0.010585</td>\n",
+       "      <td>82.849228</td>\n",
+       "      <td>600</td>\n",
+       "      <td>0.001682</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Rm, Ohm     T, s  2Ui, ticks  2Ui+n, ticks  N    lambda          Q  \\\n",
-       "0        10  0.00008         5.2           2.4  2  0.386595  11.668773   \n",
-       "1        20  0.00008        10.0           2.4  3  0.475705  10.236464   \n",
-       "2        30  0.00008         9.6           2.0  3  0.522872   9.687756   \n",
-       "3        40  0.00008         9.2           3.2  2  0.528026   9.634217   \n",
-       "4        50  0.00008         8.8           2.8  2  0.572566   9.215338   \n",
-       "5        60  0.00008         8.4           2.4  2  0.626381   8.796459   \n",
-       "6        70  0.00008         8.0           2.0  2  0.693147   8.377580   \n",
-       "7        80  0.00008         7.6           3.6  1  0.747214   8.100821   \n",
-       "8        90  0.00008         7.2           3.2  1  0.810930   7.829816   \n",
-       "9       100  0.00008         6.8           3.2  1  0.753772   8.070402   \n",
-       "10      200  0.00008        10.8           2.8  1  1.349927   6.735944   \n",
-       "11      300  0.00008        16.0           2.4  1  1.897120   6.427811   \n",
-       "12      400  0.00008         4.8           0.4  1  2.484907   6.327124   \n",
+       "          C1, F         C2, F         C3, F        C4, F            dC1  \\\n",
+       "0  2.200000e-08  3.300000e-08  4.700000e-08  4.700000e-07  2.200000e-09   \n",
        "\n",
-       "        R, Ohm      L, H  \n",
-       "0    92.849228  0.012525  \n",
-       "1   102.849228  0.010150  \n",
-       "2   112.849228  0.010114  \n",
-       "3   122.849228  0.011753  \n",
-       "4   132.849228  0.011689  \n",
-       "5   142.849228  0.011293  \n",
-       "6   152.849228  0.010558  \n",
-       "7   162.849228  0.010313  \n",
-       "8   172.849228  0.009865  \n",
-       "9   182.849228  0.012777  \n",
-       "10  282.849228  0.009533  \n",
-       "11  382.849228  0.008843  \n",
-       "12  482.849228  0.008198  "
+       "            dC2           dC3           dC4  L, H     dL  f, Hz  L_mean, H  \\\n",
+       "0  3.300000e-09  4.700000e-09  4.700000e-08  0.01  0.001     40   0.010585   \n",
+       "\n",
+       "    R_0, Ohm  R_no_fluctuations, Ohm  dL_mean, H  \n",
+       "0  82.849228                     600    0.001682  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_1"
+    "table_consts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +299,7 @@
        "82.84922800626234"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +333,9 @@
     "data_1[\"dL, H\"] = dL\n",
     "\n",
     "L_mean = L.mean()\n",
-    "table_consts[\"L_mean, H\"] = L_mean\n"
+    "dL_mean = np.sqrt(np.sum(dL**2))\n",
+    "table_consts[\"L_mean, H\"] = L_mean\n",
+    "table_consts[\"dL_mean, H\"] = dL_mean"
    ]
   },
   {
@@ -498,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +356,7 @@
        "Text(0.5, 1.0, 'График зависимости добротности Q от сопротивления R')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -546,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +403,7 @@
      "output_type": "stream",
      "text": [
       "R полученное эксперементально = 600\n",
-      "R_critical = 1387.3105436413832\n"
+      "R_critical = 1387.3105436413832 +- 130.2416535048047\n"
      ]
     }
    ],
@@ -562,13 +411,14 @@
     "R_no_fluctuations = 600\n",
     "table_consts[\"R_no_fluctuations, Ohm\"] = R_no_fluctuations\n",
     "R_critical = 2 * np.sqrt(L_mean/table_consts[\"C1, F\"].to_numpy())\n",
+    "dR_critical = np.sqrt((0.5 * R_critical/L_mean*dL_mean)**2 + (0.5 * R_critical/table_consts[\"C1, F\"].to_numpy()*table_consts[\"dC1\"].to_numpy())**2)\n",
     "print(\n",
-    "    f\"R полученное эксперементально = {R_no_fluctuations}\\nR_critical = {R_critical.item()}\")\n"
+    "    f\"R полученное эксперементально = {R_no_fluctuations}\\nR_critical = {R_critical.item()} +- {dR_critical.item()}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -620,13 +470,6 @@
     "# Close the Pandas Excel writer and output the Excel file.\n",
     "writer.save()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
