project 2.1 still not good

--- a/Project2.1/project copy.ipynb
+++ b/Project2.1/project copy.ipynb
@@ -61,30 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.30173779 0.12498389 0.23094011]]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "Text(0.5, 0, 'Z')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea9d03cc888042eab046b5a788814150",
+       "model_id": "63b1cb6182764cf88e4c52f05789810d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +114,7 @@
     "I = 10  # A\n",
     "R = 0.1  # м \n",
     "\n",
-    "tr = model.calculate_trajectory(start_position, start_angels, v0, q, m, I, R)\n",
+    "tr = model.calculate_trajectory(start_position, start_angels, v0, q, m, I, R, t_max=3)\n",
     "%matplotlib widget\n",
     "\n",
     "fig = plt.figure()\n",
